# ExoPy

./: .gitignore  README.md  pyproject.toml  test.ipynb  test.py
exopy/: __init__.py  config.py  data.py  exceptions.py  observation.py  star.py
exopy/audit/: __init__.py  session.py
exopy/clients/: __init__.py  dace.py
exopy/core/: __init__.py  data.py  instrument.py  observation.py  star.py
exopy/pipeline/: __init__.py  acquisition.py  indexing.py  processing.py
exopy/ports/: __init__.py  interfaces.py
exopy/sources/: __init__.py  dace.py
exopy/storage/: __init__.py  cache.py  hdf5.py
exopy/utils/: filters.py
tests/: test_config.py  test_dace_client.py  test_data.py  test_instrument.py  test_observation.py  test_observation_product.py  test_star.py  test_storage.py
tests/audit/: test_audit.py
tests/core/: test_data.py  test_instrument.py  test_observation.py  test_observation_product.py  test_star.py
tests/pipeline/: test_acquisition.py  test_processing.py
tests/sources/: test_dace_client.py
tests/storage/: test_storage.py
