[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "exopy"
version = "0.1.0"
description = "Object-oriented tools for fetching, storing, and preparing exoplanet spectroscopy data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "astropy>=6.0",
    "dace-query>=3.0",
    "h5py>=3.10",
    "numpy>=1.24",
    "pandas>=2.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["exopy*"]

[tool.ruff]
line-length = 100
target-version = "py310"
